# xformat

./: CMakeLists.txt  README.md
include/: XForamt.h  XFormat.h  xformat.h
src/: test  test.cpp  xformat.cpp
test/: test.cpp
